@@ -121,7 +121,7 @@ public class BasicGraphBuilder implements GraphBuilder {
 
     /** @see GraphBuilder#clone(boolean) */
     public Object clone(boolean deep) throws Exception {
-        GraphBuilder builder = (GraphBuilder) getClass().newInstance();
+        GraphBuilder builder = (GraphBuilder) getClass().getDeclaredConstructor().newInstance();
         if (deep) builder.importGraph(getGraph());
 
         return (builder);
