@@ -101,7 +101,7 @@ public abstract class JDBCFeatureCollectionOnlineTest extends JDBCTestSupport {
     public void testAdd() throws IOException {
         SimpleFeatureBuilder b = new SimpleFeatureBuilder(collection.getSchema());
         b.set(aname("intProperty"), Integer.valueOf(3));
-        b.set(aname("doubleProperty"), new Double(3.3));
+        b.set(aname("doubleProperty"), Double.valueOf(3.3));
         b.set(aname("stringProperty"), "three");
         b.set(aname("geometry"), new GeometryFactory().createPoint(new Coordinate(3, 3)));
 
