@@ -339,6 +339,9 @@ public class GeoTiffReader extends AbstractGridCoverage2DReader implements GridC
                 noData = metadata.getNoData();
             }
 
+            // collect scales and offsets is present
+            collectScaleOffset(iioMetadata);
+
             //
             // parse and set layout
             //
@@ -544,6 +547,7 @@ public class GeoTiffReader extends AbstractGridCoverage2DReader implements GridC
         Color inputTransparentColor = null;
         OverviewPolicy overviewPolicy = null;
         int[] suggestedTileSize = null;
+        boolean rescalePixels = AbstractGridFormat.RESCALE_PIXELS.getDefaultValue();
 
         //
         // Checking params
@@ -585,6 +589,9 @@ public class GeoTiffReader extends AbstractGridCoverage2DReader implements GridC
                         }
                     }
                     continue;
+                }
+                if (name.equals(AbstractGridFormat.RESCALE_PIXELS.getName())) {
+                    rescalePixels = Boolean.TRUE.equals(param.getValue());
                 }
             }
         }
@@ -665,9 +672,16 @@ public class GeoTiffReader extends AbstractGridCoverage2DReader implements GridC
         pbjRead.add(null);
         pbjRead.add(readP);
         pbjRead.add(READER_SPI.createReaderInstance());
-        RenderedOp coverageRaster =
-                JAI.create(
-                        "ImageRead", pbjRead, newHints != null ? (RenderingHints) newHints : null);
+        PlanarImage coverageRaster =
+                JAI.create("ImageRead", pbjRead, newHints != null ? newHints : null);
+
+        // applying rescale if needed
+        if (rescalePixels) {
+            coverageRaster =
+                    PlanarImage.wrapRenderedImage(
+                            ImageUtilities.applyRescaling(
+                                    scales, offsets, coverageRaster, newHints));
+        }
 
         //
         // MASKING INPUT COLOR as indicated
@@ -687,7 +701,7 @@ public class GeoTiffReader extends AbstractGridCoverage2DReader implements GridC
         ROI roi = null;
         // Using MaskOvrProvider
         if (hasMaskOvrProvider) {
-            // Parameter definiton
+            // Parameter definition
             GridEnvelope ogr = getOriginalGridRange();
             Rectangle sourceRegion;
             if (readP.getSourceRegion() != null) {
@@ -858,7 +872,7 @@ public class GeoTiffReader extends AbstractGridCoverage2DReader implements GridC
                             Vocabulary.formatInternational(VocabularyKeys.NODATA),
                             new Color[] {new Color(0, 0, 0, 0)},
                             NumberRange.create(noData, noData));
-            CoverageUtilities.setNoDataProperty(properties, new Double(noData));
+            CoverageUtilities.setNoDataProperty(properties, Double.valueOf(noData));
             image.setProperty(NoDataContainer.GC_NODATA, new NoDataContainer(noData));
         }
         // Setting ROI Property
