@@ -44,7 +44,6 @@ import javax.imageio.spi.ImageReaderSpi;
 import javax.media.jai.ImageLayout;
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.FilenameUtils;
-import org.apache.commons.io.IOUtils;
 import org.geotools.coverage.grid.io.GranuleSource;
 import org.geotools.coverage.grid.io.GranuleStore;
 import org.geotools.coverage.grid.io.GridCoverage2DReader;
@@ -411,7 +410,9 @@ public class ImageMosaicConfigHandler {
                 }
             } else {
                 // create a datastore as instructed
-                spi = (DataStoreFactorySpi) Class.forName(SPIClass).newInstance();
+                spi =
+                        (DataStoreFactorySpi)
+                                Class.forName(SPIClass).getDeclaredConstructor().newInstance();
             }
             // set ParentLocation parameter since for embedded database like H2 we must change the
             // database
@@ -1414,22 +1415,16 @@ public class ImageMosaicConfigHandler {
             properties.setProperty(Prop.NO_DATA, String.valueOf(mosaicConfiguration.getNoData()));
         }
 
-        OutputStream outStream = null;
         String filePath =
                 runConfiguration.getParameter(Prop.ROOT_MOSAIC_DIR)
                         + "/"
                         // + runConfiguration.getIndexName() + ".properties"));
                         + mosaicConfiguration.getName()
                         + ".properties";
-        try {
-            outStream = new BufferedOutputStream(new FileOutputStream(filePath));
+        try (OutputStream outStream = new BufferedOutputStream(new FileOutputStream(filePath))) {
             properties.store(outStream, "-Automagically created from GeoTools-");
         } catch (IOException e) {
             eventHandler.fireEvent(Level.SEVERE, e.getLocalizedMessage(), 0);
-        } finally {
-            if (outStream != null) {
-                IOUtils.closeQuietly(outStream);
-            }
         }
     }
 
@@ -1597,10 +1592,16 @@ public class ImageMosaicConfigHandler {
                     new CatalogConfigurationBean();
             catalogConfigurationBean.setCaching(
                     IndexerUtils.getParameterAsBoolean(Prop.CACHING, indexer));
-            catalogConfigurationBean.setAbsolutePath(
-                    IndexerUtils.getParameterAsBoolean(Prop.ABSOLUTE_PATH, indexer));
-            catalogConfigurationBean.setPathType(
-                    IndexerUtils.getParameterAsEnum(Prop.PATH_TYPE, PathType.class, indexer));
+            if (IndexerUtils.getParameterAsBoolean(Prop.ABSOLUTE_PATH, indexer)) {
+                catalogConfigurationBean.setPathType(PathType.ABSOLUTE);
+            } else {
+                catalogConfigurationBean.setPathType(PathType.RELATIVE);
+            }
+            PathType pathType =
+                    IndexerUtils.getParameterAsEnum(Prop.PATH_TYPE, PathType.class, indexer);
+            if (pathType != null) {
+                catalogConfigurationBean.setPathType(pathType);
+            }
 
             catalogConfigurationBean.setLocationAttribute(
                     IndexerUtils.getParameter(Prop.LOCATION_ATTRIBUTE, indexer));
@@ -1642,7 +1643,8 @@ public class ImageMosaicConfigHandler {
             catalogConfig = new CatalogBuilderConfiguration();
             CatalogConfigurationBean bean = mosaicConfiguration.getCatalogConfigurationBean();
             catalogConfig.setParameter(Prop.LOCATION_ATTRIBUTE, (bean.getLocationAttribute()));
-            catalogConfig.setParameter(Prop.ABSOLUTE_PATH, Boolean.toString(bean.isAbsolutePath()));
+            catalogConfig.setParameter(
+                    Prop.ABSOLUTE_PATH, Boolean.toString(bean.getPathType() == PathType.ABSOLUTE));
             catalogConfig.setParameter(Prop.PATH_TYPE, bean.getPathType().toString());
             catalogConfig.setParameter(
                     Prop.ROOT_MOSAIC_DIR /* setRootMosaicDirectory( */,
